# note

./: .gitignore  README.md  docker-compose.yml  headers.txt  response.html  response_headers.txt  vps_tspl_nginx.txt
.github/workflows/: deploy.yml
backend/: Cargo.toml  Dockerfile  check_output.txt  check_output2.txt
backend/src/: main.rs
deploy/: nginx.conf  note-app.service
frontend/: dev_output.txt  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DashboardLayout.tsx  Navbar.tsx  ProtectedRoute.tsx  PublicRoute.tsx  Sidebar.tsx
frontend/src/lib/: AuthContext.tsx  UserDatabaseContext.tsx  supabase.ts
frontend/src/pages/: CreateNotePage.tsx  GuidePage.tsx  LoginPage.tsx  NotePage.tsx  SetupPage.tsx  SummaryPage.tsx
